--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@
     <title>The Mighty Sloth</title>
   </head>
   <body>
-    The Mighty Sloth
 
-    [logo.svg]
-    Sloths
-    Three-toed sloths
+  <header>
 
+    <h1>The Mighty Sloth</h1>
+
+    <img src="images/logo.svg" alt="">
+
+    <ul>
+    <li><a href="">Sloths</a></li>
+    <li><a href="">Three-toed sloths</a></li>
+    </ul>
     ---
 
     [banner.jpg]
 
     ---
-
+ </header>
     Sloths
 
     Sloths are mammals classified in the families Megalonychidae (two-toed sloths) and Bradypodidae (three-toed sloths), including six extant species. They are named after the capital sin of sloth because they seem slow and lazy at first glance; however, their usual idleness is due to metabolic adaptations for conserving energy.
