--- a/index.html
+++ b/index.html
@@ -6,38 +6,37 @@
   </head>
   <body>
 
-  <header>
+    <ul class=skip-links>
+    <li><a href="sloths">Sloths</a></li>
+    <li><a href="three-toed sloths">Three-toed sloths</a></li>
+    </ul>
+
+  <header role="banner">
 
     <h1>The Mighty Sloth</h1>
+    <img src="images/logo.svg" alt="small black and white logo of sloth head">
 
-    <img src="images/logo.svg" alt="">
-
-    <ul>
-    <li><a href="">Sloths</a></li>
-    <li><a href="">Three-toed sloths</a></li>
-    </ul>
-    ---
-
-    [banner.jpg]
+    <img src="images/banner" alt="sloth with a plate of vegetables">
 
     ---
  </header>
-    Sloths
 
-    Sloths are mammals classified in the families Megalonychidae (two-toed sloths) and Bradypodidae (three-toed sloths), including six extant species. They are named after the capital sin of sloth because they seem slow and lazy at first glance; however, their usual idleness is due to metabolic adaptations for conserving energy.
-    Aside from their surprising speed during emergency flights from predators, other notable traits of sloths include their strong body and their ability to host symbiotic algae on their furs.
+ <main role="main">
+    <h2 id="sloths">Sloths</h2>
 
-    [creatures.jpg]
-    Three-toed sloth featured with an ant-eater, a platypus & armadillos.
+    <p>Sloths are mammals classified in the families Megalonychidae (two-toed sloths) and Bradypodidae (three-toed sloths), including six extant species. They are named after the capital sin of sloth because they seem slow and lazy at first glance; however, their usual idleness is due to metabolic adaptations for conserving energy.
+    Aside from their surprising speed during emergency flights from predators, other notable traits of sloths include their strong body and their ability to host symbiotic algae on their furs.</p>
 
-    They are classified in the order Pilosa because they are related to anteaters, which sport a similar set of specialized claws. Extinct sloth species include many megafaunal ground sloths, some of which attained the size of elephants, as well as a few species of marine sloths. Extant sloths are medium-sized arboreal (tree-dwelling) residents of the jungles of Central and South America.
-    Sloths make good habitats for other organisms, and a single sloth may be home to moths, beetles, cockroaches, fungi, ciliates, and algae.
+    <img src="images/creatures.jpg" alt="Three-toed sloth featured with an ant-eater, a platypus & armadillos.">
 
-    [Read more](https://en.wikipedia.org/wiki/Sloth)
+    <p>They are classified in the order Pilosa because they are related to anteaters, which sport a similar set of specialized claws. Extinct sloth species include many megafaunal ground sloths, some of which attained the size of elephants, as well as a few species of marine sloths. Extant sloths are medium-sized arboreal (tree-dwelling) residents of the jungles of Central and South America.
+    Sloths make good habitats for other organisms, and a single sloth may be home to moths, beetles, cockroaches, fungi, ciliates, and algae.</p>
+
+    <a href="https://en.wikipedia.org/wiki/Sloth" aria-label="Read more about sloths">Read more</a>
 
     ---
 
-    Three-toed sloth
+    <h2>Three-toed sloth</h2>
 
     [images/illustration.jpg]
 
