Add p tag to content and aria labels to main

--- a/index.html
+++ b/index.html
@@ -36,19 +36,20 @@
 
     ---
 
-    <h2>Three-toed sloth</h2>
+    <h2 id="three-toed sloths">Three-toed sloth</h2>
 
-    [images/illustration.jpg]
+    <img src="images/illustration.jpg" alt="illustration of smoth">
 
-    The three-toed sloths are arboreal neotropical mammals (also known as “three-fingered” sloths)
+    <p>The three-toed sloths are arboreal neotropical mammals (also known as “three-fingered” sloths)
     Famously slow-moving, a sloth travels at an average speed of 0.24 km/h. Three-toed sloths are about the size of a small dog or a large cat, with the head and body having a combined length around 45 cm and a weight of 3.5–4.5 kg. Unlike the two-toed sloths, they also have short tails of 6–7 cm, and they have three clawed toes on each limb.
-    All sloths have three digits on their hindlimbs; the difference is found in the number of digits on the forelimbs; thus they are sometimes referred to as three-fingered sloths.
+    All sloths have three digits on their hindlimbs; the difference is found in the number of digits on the forelimbs; thus they are sometimes referred to as three-fingered sloths.</p>
 
-    [Read more](https://en.wikipedia.org/wiki/Three-toed_sloth)
+    <a href="https://en.wikipedia.org/wiki/Three-toed_sloth" aria-label="Read more about three-toed sloth">[Read more</a>
+</main>
 
-    ---
-
-    https://en.wikipedia.org/wiki/Sloth
+<footer role=contentinfo>
+  <a href="https://en.wikipedia.org/wiki/Sloth"
+</footer>
 
   </body>
 </html>
