--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
   </head>
   <body>
 
-    <ul class=skip-links>
-    <li><a href="sloths">Sloths</a></li>
-    <li><a href="three-toed sloths">Three-toed sloths</a></li>
-    </ul>
-
   <header role="banner">
 
     <h1>The Mighty Sloth</h1>
@@ -18,37 +13,46 @@
 
     <img src="images/banner" alt="sloth with a plate of vegetables">
 
-    ---
+  <nav role="navigation">
+    <ul class=skip-links>
+    <li><a href="sloths">Sloths</a></li>
+    <li><a href="three-toed-sloths">Three-toed sloths</a></li>
+    </ul>
+  </nav>
+
  </header>
 
  <main role="main">
-    <h2 id="sloths">Sloths</h2>
 
-    <p>Sloths are mammals classified in the families Megalonychidae (two-toed sloths) and Bradypodidae (three-toed sloths), including six extant species. They are named after the capital sin of sloth because they seem slow and lazy at first glance; however, their usual idleness is due to metabolic adaptations for conserving energy.
-    Aside from their surprising speed during emergency flights from predators, other notable traits of sloths include their strong body and their ability to host symbiotic algae on their furs.</p>
+  <section>
+    <article>
+      <h2 id="sloths">Sloths</h2>
+      <p>Sloths are mammals classified in the families Megalonychidae (two-toed sloths) and Bradypodidae (three-toed sloths), including six extant species. They are named after the capital sin of sloth because they seem slow and lazy at first glance; however, their usual idleness is due to metabolic adaptations for conserving energy.</p>
+      <p>Aside from their surprising speed during emergency flights from predators, other notable traits of sloths include their strong body and their ability to host symbiotic algae on their furs.</p>
 
-    <img src="images/creatures.jpg" alt="Three-toed sloth featured with an ant-eater, a platypus & armadillos.">
+      <img src="images/creatures.jpg" alt="Three-toed sloth featured with an ant-eater, a platypus & armadillos.">
+      <p>They are classified in the order Pilosa because they are related to anteaters, which sport a similar set of specialized claws. Extinct sloth species include many megafaunal ground sloths, some of which attained the size of elephants, as well as a few species of marine sloths. Extant sloths are medium-sized arboreal (tree-dwelling) residents of the jungles of Central and South America.
+      Sloths make good habitats for other organisms, and a single sloth may be home to moths, beetles, cockroaches, fungi, ciliates, and algae.</p>
+      <a href="https://en.wikipedia.org/wiki/Sloth" aria-label="Read more about sloths">Read more</a>
+      </article>
+  </section>
 
-    <p>They are classified in the order Pilosa because they are related to anteaters, which sport a similar set of specialized claws. Extinct sloth species include many megafaunal ground sloths, some of which attained the size of elephants, as well as a few species of marine sloths. Extant sloths are medium-sized arboreal (tree-dwelling) residents of the jungles of Central and South America.
-    Sloths make good habitats for other organisms, and a single sloth may be home to moths, beetles, cockroaches, fungi, ciliates, and algae.</p>
-
-    <a href="https://en.wikipedia.org/wiki/Sloth" aria-label="Read more about sloths">Read more</a>
-
-    ---
-
-    <h2 id="three-toed sloths">Three-toed sloth</h2>
-
+  <section>
+    <article>
+    <h2 id="three-toed-sloths">Three-toed sloth</h2>
     <img src="images/illustration.jpg" alt="illustration of smoth">
 
     <p>The three-toed sloths are arboreal neotropical mammals (also known as “three-fingered” sloths)
     Famously slow-moving, a sloth travels at an average speed of 0.24 km/h. Three-toed sloths are about the size of a small dog or a large cat, with the head and body having a combined length around 45 cm and a weight of 3.5–4.5 kg. Unlike the two-toed sloths, they also have short tails of 6–7 cm, and they have three clawed toes on each limb.
     All sloths have three digits on their hindlimbs; the difference is found in the number of digits on the forelimbs; thus they are sometimes referred to as three-fingered sloths.</p>
+    <a href="https://en.wikipedia.org/wiki/Three-toed_sloth" aria-label="Read more about three-toed sloth">Read more</a>
+    </article>
+  </section>
 
-    <a href="https://en.wikipedia.org/wiki/Three-toed_sloth" aria-label="Read more about three-toed sloth">[Read more</a>
 </main>
 
-<footer role=contentinfo>
-  <a href="https://en.wikipedia.org/wiki/Sloth"
+<footer role="contentinfo">
+  <a href="https://en.wikipedia.org/wiki/Sloth">Wikipedia</a>
 </footer>
 
   </body>
